--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,14 @@
     font-family: "Lato", sans-serif;
 }
 
-.home,
+.leaflet-container {
+    width: 100%;
+    height: 100vh;
+  }
+
+.home {
+    height: 100vh;
+}
 .reports,
 .products {
     display: flex;
