sidebar cu calendar

--- a/src/components/Calendar/Calendar.css
+++ b/src/components/Calendar/Calendar.css
@@ -1,4 +1,13 @@
+.react-datepicker__input-container input {
+    background: transparent;
+    border: none;
+    color: transparent;
+}
 
-.rdrDayToday .rdrDayNumber span:after{
-    background: #46A346;
+.react-datepicker__input-container input:focus {
+    outline: none;
+}
+
+.react-datepicker-popper {
+    left: 20% !important;
 }
