--- a/src/components/sidebar/Sidebar.css
+++ b/src/components/sidebar/Sidebar.css
@@ -1,3 +1,10 @@
+.sidebar-container {
+    position: absolute;
+    z-index: 1000;
+    display: flex;
+    flex-direction: column;
+}
+
 .sidebar {
     height: 80px;
     width: 30vw;
@@ -10,8 +17,6 @@
     overflow: auto;
     border-color: #bfbfbf;
     background-color: #fff;
-    z-index: 1000;
-    position: absolute;
 }
 
 .menu-bars {
@@ -221,6 +226,6 @@
     color: #6f6d69;
 }
 
-span {
+nav span {
     margin-left: 16px;
 }
